Tarif - Modification couleurs

--- a/Client Web/Autres/tarifs.html
+++ b/Client Web/Autres/tarifs.html
@@ -9,10 +9,12 @@
 <p>Les tarifs sont t&eacute;l&eacute;chargeables :</p>
 <div class="row text-center">
 	<div class="col-sm-12 col-md-12">
-		<div class="card">
-			<div class="card-body"><em class="fas fa-file text-info" style="font-size: 45px;"></em>
-				<p>Tarifs 2017-2018</p>
+		<a href="images/Tarifs_2017_2018.pdf" target="_blank">
+			<div class="card">
+				<div class="card-body"><em class="fas fa-file text-warning" style="font-size: 45px;"></em>
+					<p class="text-warning">Tarifs 2017-2018</p>
+				</div>
 			</div>
-		</div>
+		</a>
 	</div>
 </div>
