Acceuil - Ajout instagram

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -61,7 +61,7 @@
 		<tbody>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-success">Prochainement</span></td>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-danger">Complète</span></td>
 				<td>Ramonville</td>
 				<td>16-06-2018</td>
 			</tr>
@@ -138,7 +138,7 @@
 			<div class="col-md-5"><img src="images/Images_Articles/LP9A1629_DxO.jpg" alt="" class="img-fluid" style="border-radius: 5px; margin: auto;" /></div>
 			<div class="col-md-7 align-self-center">
 				<h3>Nous avons besoin de vous !</h3>
-				<h4 class="text-secondary">Vous deviendrez un nouveau hero !</h4>
+				<h4 class="text-secondary">Vous deviendrez un nouvel hero !</h4>
 			</div>
 		</div>
 	</div>
