Acceuil - Maj tableau formation

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -67,13 +67,13 @@
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-success">Prochainement</span></td>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-danger">Annulée</span></td>
 				<td>Ramonville</td>
 				<td>23-06-2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-success">Prochainement</span></td>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-danger">Annulée</span></td>
 				<td>Ramonville</td>
 				<td>24-06-2018</td>
 			</tr>
@@ -82,6 +82,12 @@
 				<td style="margin:auto; text-align: center;"><span class="badge badge-success">Prochainement</span></td>
 				<td>Ramonville</td>
 				<td>29-06-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1/PSE2</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>30-06-2018</td>
 			</tr>
 		</tbody>
 	</table>
