Accueil - Ajout nouvelles formation

--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -40,13 +40,29 @@
 				<td>Ramonville</td>
 				<td>24-06-2018</td>
 			</tr>
+			<tr>
+				<th scope="row">Trail des Vignes et des Côteaux</th>
+				<td>Lisle sur Tarn</td>
+				<td>01-07-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Festivités du 14 juillet</th>
+				<td>Toulouse - Prairie des filtres</td>
+				<td>14-07-2018</td>
+			</tr>
+			<tr>
+				<th scope="row">Bouge ton Campus</th>
+				<td>Toulouse - INSA</td>
+				<td>30-09-2018</td>
+			</tr>
 		</tbody>
 	</table>
 </div>
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
-	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme &agrave; venir prochainement :</h3>
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
 	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;venement voulu.</p>
+	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons à consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
 	<table class="table table-striped" style="margin-left: auto; margin-right: auto;">
@@ -60,10 +76,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
-				<td style="margin:auto; text-align: center;"><span class="badge badge-danger">Complète</span></td>
-				<td>Ramonville</td>
-				<td>16-06-2018</td>
+				<td style="margin:auto; text-align: center; font-size: 12pt; font-weight: bold;text-decoration: underline;" colspan=4>Saison 2017 - 2018</td>
 			</tr>
 			<tr>
 				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
@@ -88,6 +101,75 @@
 				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
 				<td>Ramonville</td>
 				<td>30-06-2018</td>
+			</tr>
+			<tr>
+				<td style="margin:auto; text-align: center; font-size: 12pt; font-weight: bold;text-decoration: underline;" colspan=4>Saison 2018 - 2019</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>20-10-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>22-10-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>27-10-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>25-11-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs Premiers Secours</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>01-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue Formateurs PSC1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>02-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE2</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>02-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSC1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>22-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation continue PSE1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>23-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE1</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>26-12-2018</td>
+			</tr>
+			<tr>
+				<th scope="row" style="text-align: left;"><span style="font-size: 10pt;">Formation PSE2</span></th>
+				<td style="margin:auto; text-align: center;"><span class="badge badge-primary">Nouvelle</span></td>
+				<td>Ramonville</td>
+				<td>02-01-2019</td>
 			</tr>
 		</tbody>
 	</table>
