Client Web - Correction site internet

--- a/Client Web/Poste de Secours/CommanderPosteSecours.html
+++ b/Client Web/Poste de Secours/CommanderPosteSecours.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid bg-primary text-light">
 	<div class="container">
 		<h1 class="display-4">Commander un poste de secours</h1>
-		<p class="lead">Nous nous occupons de securiser vos evenements !</p>
+		<p class="lead">Nous nous occupons de sécuriser vos évènements !</p>
 	</div>
 </div>
 <hr />
@@ -36,7 +36,7 @@
 		</div>
 	</div>
 </div>
-<h4 class="text-primary">Nos presences sur les evenements :</h4>
+<h4 class="text-primary">Nos présences sur les évènements :</h4>
 <table class="table table-striped">
 	<thead>
 		<tr>
@@ -62,7 +62,7 @@
 			<td class="center">19-03-2017</td>
 		</tr>
 		<tr>
-			<th scope="row">Handball : Fenix - Aix</th>
+			<th scope="row">Handball : Fénix - Aix</th>
 			<td>Palais des Sports</td>
 			<td class="center">12-04-2017</td>
 		</tr>
