--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -2,9 +2,9 @@
 <p style="font-size: 11px; text-align: center; color: #3ba4d8;"><a href="https://www.facebook.com/Gbielliphotographie/" style="text-decoration: none; font-size: 10px;">&copy;GuillaumeBielli</a></p>
 <hr />
 <div class="btn-group d-flex justify-content-center">
-	<div class="btn-group"><a href="#Dps_section" class="btn btn-primary">Dispositif Premier Secours</a></div>
-	<div class="btn-group"><a href="#Formation_section" class="btn btn-danger">Formations Secourisme</a></div>
-	<div class="btn-group"><a href="#Sauvetage_section" class="btn btn-success">Sauvetage Sportif</a></div>
+	<a href="#Dps_section" class="btn btn-primary w-100">Dispositif Premier Secours</a>
+	<a href="#Formation_section" class="btn btn-danger w-100">Formations Secourisme</a>
+	<a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a>
 </div>
 <hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
@@ -61,7 +61,7 @@
 <hr />
 <div id="Formation_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #d9534f;">Formations Secourisme des prochains mois :</h3>
-	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;venement voulu.</p>
+	<p style="font-size: 12pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Les inscritions se font en cliquant sur le calendrier ci-contre &agrave; la date et l'&eacute;vènement voulu.</p>
 	<p style="font-size: 10pt; text-align: center; margin-bottom: 10px; color: #d9534f;">Toutes nos dates ne sont pas reprises ci-dessous nous vous invitons à consulter le calendrier ci-contre.</p>
 	<hr />
 	<!-- <span class="label label-warning">En Cours</span> -->
