Calendrier - Ajout commentaire

--- a/Client Web/Information_calendrier.html
+++ b/Client Web/Information_calendrier.html
@@ -8,6 +8,6 @@ Pour vous inscrire cliquez ICI
     <p>Cette formation se déroulera à la salle de formation de <strong>Ramonville-Saint-Agne</strong></p>
     <p>En cliquant sur le bouton ci-dessous vous serez redirigé vers le formulaire d'inscription.</p>
     <p>Merci de bien vérifier les informations saisies, toute erreur pourrait entrainer des retards</p>
-    <a class="btn btn-light btn-lg text-danger mt-4" href="" target="_blank" role="button">Je m'inscris</a>
+    <a class="btn btn-light btn-lg text-danger mt-4" href="/!\copiercollerici/!\" target="_blank" role="button">Je m'inscris</a>
 </div>
 
