--- a/Client Web/Poste de Secours/CommanderPosteSecours.html
+++ b/Client Web/Poste de Secours/CommanderPosteSecours.html
@@ -37,6 +37,14 @@
 	</div>
 </div>
 <h4 class="text-primary">Nos présences sur les évènements :</h4>
+<div class="row mb-4">
+	<div class="col-md-6">
+		<img src="images/Images_Articles/DPS--Demi-Finale.png" alt="Poste Demi-Finale FanZone" class="img-fluid rounded" />
+	</div>
+	<div class="col-md-6">
+		<img src="images/Images_Articles/DPS--Finale.png" alt="Poste Finale FanZone" class="img-fluid rounded" />
+	</div>
+</div>
 <table class="table table-striped">
 	<thead>
 		<tr>
@@ -180,6 +188,21 @@
 			<th scope="row">Trail des Vignes et des Côteaux</th>
 			<td>Lisle sur Tarn</td>
 			<td>01-07-2018</td>
+		</tr>
+		<tr>
+			<th scope="row">Demi-Finale FanZone France - Belgique</th>
+			<td>Toulouse</td>
+			<td>10-07-2018</td>
+		</tr>
+		<tr>
+			<th scope="row">Fête Nationale 14 Juillet</th>
+			<td>Toulouse</td>
+			<td>14-07-2018</td>
+		</tr>
+		<tr>
+			<th scope="row">Finale FanZone France - Croatie</th>
+			<td>Toulouse</td>
+			<td>15-07-2018</td>
 		</tr>
 	</tbody>
 </table>
