--- a/Client Web/Sauvetage Sportif/Se pré-inscrire.html
+++ b/Client Web/Sauvetage Sportif/Se pré-inscrire.html
@@ -9,22 +9,26 @@
 <p>Remplissez le formulaire</p>
 <div class="row text-center">
 	<div class="col-sm-12 col-md-12">
-		<div class="card">
-			<div class="card-body"><em class="fas fa-file text-success" style="font-size: 45px;"></em>
-				<p class="text-success">Formulaire de Pr&eacute;-inscription</p>
+		<a href="https://drive.google.com/open?id=1K3scSbsazMz9zgjneL5duupaW65mm-rYa4V76CK50IY" target="_blank">
+			<div class="card">
+				<div class="card-body"><em class="fas fa-file text-success" style="font-size: 45px;"></em>
+					<p class="text-success">Formulaire de Pr&eacute;-inscription</p>
+				</div>
 			</div>
-		</div>
+		</a>
 	</div>
 </div>
 <h4 class="text-success mt-4">Deuxième &eacute;tape :</h4>
 <p>T&eacute;l&eacute;charger le dossier d'inscription</p>
 <div class="row text-center">
 	<div class="col-sm-12 col-md-12">
-		<div class="card">
-			<div class="card-body"><em class="fas fa-file text-success" style="font-size: 45px;"></em>
-				<p class="text-success">Dossier d'inscription</p>
+		<a href="http://www.clubdesauvetagetoulousain.org/images/Doc/Dossier_inscription_16-17.pdf" target="_blank">
+			<div class="card">
+				<div class="card-body"><em class="fas fa-file text-success" style="font-size: 45px;"></em>
+					<p class="text-success">Dossier d'inscription</p>
+				</div>
 			</div>
-		</div>
+		</a>
 	</div>
 </div>
 <h4 class="text-success mt-4">Troisième &eacute;tape :</h4>
@@ -37,7 +41,7 @@
 				<h6>A l&rsquo;attention de Mr TOUJA</h6>
 				<h6>3 Chemin des Coteaux</h6>
 				<h6>31320 Auzeville-Tolosane</h6>
-				<p class="center">Pour plus d'information envoyer un mail &agrave; : <a href="mailto:formationsaquatiquestoulouse@gmail.com" class="text-success">formationsaquatiquestoulouse@gmail.com</a></p>
+				<p class="center">Pour plus d'information envoyer un mail &agrave; : <a href="mailto:sauvetagesportiftoulouse@gmail.com" class="text-success">sauvetagesportiftoulouse@gmail.com</a></p>
 			</div>
 		</div>
 	</div>
