--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -21,9 +21,7 @@
 		</thead>
 		<tbody>
 			<tr>
-				<th scope="row">Festivités du 14 juillet</th>
-				<td>Toulouse - Prairie des filtres</td>
-				<td>14-07-2018</td>
+					<td style="margin:auto; text-align: center; font-size: 12pt; font-weight: bold;text-decoration: underline;" colspan=4>Saison 2018 - 2019</td>
 			</tr>
 			<tr>
 				<th scope="row">Bouge ton Campus</th>
