--- a/Client Web/acceuil.html
+++ b/Client Web/acceuil.html
@@ -7,6 +7,15 @@
 	<a href="#Sauvetage_section" class="btn btn-success w-100">Sauvetage Sportif</a>
 </div>
 <hr />
+<div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px; line-height: 80%; color: #343a40 ;">
+	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; background-color: #ffc107 ;">Vie du Club :</h3>
+	<p class="center" style="font-size: 13pt;">L'Assemblée Générale annuel aura lieu le :</p>
+	<p class="center" style="font-size: 13pt; font-weight: bold;">Mercredi 19 Septembre</p>
+	<p class="center" style="font-size: 12pt;">à partir de 20h</p>
+	<p class="center" style="font-size: 12pt;">Salle de formation, Allée des Sports 31520 Ramonville-Saint-Agne</p>
+	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d722.9548469051008!2d1.4800618881695604!3d43.547806670721315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebe80e924ff91%3A0x87ad1eb92a385b8a!2sAll%C3%A9e+des+Sports%2C+31520+Ramonville-Saint-Agne!5e0!3m2!1sfr!2sfr!4v1535528687229" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen style="margin: 5px;"></iframe>
+</div>
+<hr />
 <div id="Dps_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #337ab7;">DPS &agrave; venir :</h3>
 	<p class="center" style="font-size: 12pt; color: #337ab7;">Pour les inscriptions (Licenci&eacute;s uniquement - Compte EOS obligatoire) : <a href="https://eos.ffss.fr" style="decoration-text: none; color: #333399; font-weight: bold;">Cliquez-ici</a></p>
@@ -124,6 +133,8 @@
 <div id="Sauvetage_section" style="padding: 5px; box-shadow: 0px 0px 15px 0.1px rgba(0,0,0,0.3); border-radius: 5px;">
 	<h3 class="center" style="padding-top: 5px; padding-bottom: 5px; border-radius: 5px; color: white; background-color: #449d44;">Sauvetage Sportif :</h3>
 	<p class="center" style="color: #449d44; font-size: 12pt;">Les r&eacute;sultats des comp&eacute;titions de la saison 2017 - 2018 disponnibles&nbsp;<a href="index.php?option=com_content&amp;view=article&amp;id=27:actualites&amp;catid=2:non-categorise" style="text-decoration: none; font-weight: bold; color: #339966;">ICI</a>&nbsp;</p>
+	<p class="center" style="color: #343a40; font-size: 12pt;">Reprise des entrainements le :</p>
+	<p class="center" style="color: #343a40 ;; font-size: 13pt; font-weight: bold;">Lundi 1 Octobre 2018</p>
 </div>
 <hr />
 <div class="row mb-3">
@@ -182,3 +193,20 @@
 <p>
 	<iframe class="rounded" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fclubdesauvetagetoulousain%2F&amp;tabs=timeline&amp;width=500&amp;height=500&amp;small_header=false&amp;adapt_container_width=true&amp;hide_cover=false&amp;show_facepile=true&amp;appId" width="500" height="500" style="border: none; overflow: hidden; display: block; margin-left: auto; margin-right: auto; margin-bottom: 12px;" frameborder="0" scrolling="no"></iframe>
 </p>
+
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/fr_FR/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="433296076790372"
+  theme_color="#fa3c4c">
+</div>
